--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ body {
   border: 1px solid silver;
 }
 
+.card:hover {
+  cursor: pointer;
+}
+
 .card .title h2 {
   padding: 0;
   margin: 0;
@@ -50,8 +54,34 @@ body {
   width: 220px;
   height: 220px;
   border-radius: 50%;
-  background-color: #9dd465;
+  background: linear-gradient(to top right, #9dd465, #3d3d3d 25%);
+  background-size: 400% 400%;
+  background-position: 0 0;
+  animation: bg-out 300ms ease-in forwards 1;
 }
+
+.card:hover .img {
+  animation: bg-in 300ms ease-in forwards 1;
+}
+
+@keyframes bg-in {
+  0% {
+    background-position: 0 50%;
+  }
+  100% {
+    background-position: 0 100%;
+  }
+}
+
+@keyframes bg-out {
+  0% {
+    background-position: 0 100%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
+}
+
 .card .img img {
   max-width: 220px;
 }
