--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,118 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.bg.fire {
+  background: linear-gradient(to top right, #e4604d, #3d3d3d 25%)
+}
+
+.fire {
+  background-color: #e4604d;
+}
+
+.bg.grass {
+  background: linear-gradient(to top right, #9dd465, #3d3d3d 25%)
+}
+
+.grass {
+  background-color: #9dd465;
+}
+
+.bg.electric {
+  background: linear-gradient(to top right, #f9e44f, #3d3d3d 25%)
+}
+
+.electric {
+  background-color: #f9e44f;
+}
+
+.bg.water {
+  background: linear-gradient(to top right, #6a83b6, #3d3d3d 25%)
+}
+
+.water {
+  background-color: #6a83b6;
+}
+
+.bg.ground {
+  background: linear-gradient(to top right, #e4c967, #3d3d3d 25%)
+}
+
+.ground {
+  background-color: #e4c967;
+}
+
+.bg.rock {
+  background: linear-gradient(to top right, #cabb7b, #3d3d3d 25%)
+}
+
+.rock {
+  background-color: #cabb7b;
+}
+
+.bg.fairy {
+  background: linear-gradient(to top right, #eeb2fa, #3d3d3d 25%)
+}
+
+.fairy {
+  background-color: #eeb2fa;
+}
+
+.bg.poison {
+  background: linear-gradient(to top right, #9f619d, #3d3d3d 25%)
+}
+
+.poison {
+  background-color: #9f619d;
+}
+
+.bg.bug {
+  background: linear-gradient(to top right, #c5cf4a, #3d3d3d 25%)
+}
+
+.bug {
+  background-color: #c5cf4a;
+}
+
+.bg.dragon {
+  background: linear-gradient(to top right, #857af7, #3d3d3d 25%)
+}
+
+.dragon {
+  background-color: #857af7;
+}
+
+.bg.psychic {
+  background: linear-gradient(to top right, #e56eaf, #3d3d3d 25%)
+}
+
+.psychic {
+  background-color: #e56eaf;
+}
+
+.bg.flying {
+  background: linear-gradient(to top right, #80a4f9, #3d3d3d 25%)
+}
+
+.flying {
+  background-color: #80a4f9;
+}
+
+.bg.fighting {
+  background: linear-gradient(to top right, #9b5a48, #3d3d3d 25%)
+}
+
+.fighting {
+  background-color: #9b5a48;
+}
+
+.bg.normal {
+  background: linear-gradient(to top right, #bab8ab, #3d3d3d 25%)
+}
+
+.normal {
+  background-color: #bab8ab;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -54,7 +166,6 @@ body {
   width: 220px;
   height: 220px;
   border-radius: 50%;
-  background: linear-gradient(to top right, #9dd465, #3d3d3d 25%);
   background-size: 400% 400%;
   background-position: 0 0;
   animation: bg-out 300ms ease-in forwards 1;
@@ -68,6 +179,7 @@ body {
   0% {
     background-position: 0 50%;
   }
+
   100% {
     background-position: 0 100%;
   }
@@ -77,6 +189,7 @@ body {
   0% {
     background-position: 0 100%;
   }
+
   100% {
     background-position: 0 50%;
   }
@@ -93,7 +206,6 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 4px;
-  background-color: #9dd465;
   border-radius: 10px;
 }
 
