--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.bg.fire {
+.bg-fire {
   background: linear-gradient(to top right, var(--fire), var(--card-bg) 25%)
 }
 
@@ -43,7 +43,7 @@ body {
   background-color: var(--fire);
 }
 
-.bg.grass {
+.bg-grass {
   background: linear-gradient(to top right, var(--grass), var(--card-bg) 25%)
 }
 
@@ -51,7 +51,7 @@ body {
   background-color: var(--grass);
 }
 
-.bg.electric {
+.bg-electric {
   background: linear-gradient(to top right, var(--electric), var(--card-bg) 25%)
 }
 
@@ -59,7 +59,7 @@ body {
   background-color: var(--electric);
 }
 
-.bg.water {
+.bg-water {
   background: linear-gradient(to top right, var(--water), var(--card-bg) 25%)
 }
 
@@ -67,7 +67,7 @@ body {
   background-color: var(--water);
 }
 
-.bg.ground {
+.bg-ground {
   background: linear-gradient(to top right, var(--ground), var(--card-bg) 25%)
 }
 
@@ -75,7 +75,7 @@ body {
   background-color: var(--ground);
 }
 
-.bg.rock {
+.bg-rock {
   background: linear-gradient(to top right, var(--rock), var(--card-bg) 25%)
 }
 
@@ -83,7 +83,7 @@ body {
   background-color: var(--rock);
 }
 
-.bg.fairy {
+.bg-fairy {
   background: linear-gradient(to top right, var(--fairy), var(--card-bg) 25%)
 }
 
@@ -91,7 +91,7 @@ body {
   background-color: var(--fairy);
 }
 
-.bg.poison {
+.bg-poison {
   background: linear-gradient(to top right, var(--poison), var(--card-bg) 25%)
 }
 
@@ -99,7 +99,7 @@ body {
   background-color: var(--poison);
 }
 
-.bg.bug {
+.bg-bug {
   background: linear-gradient(to top right, var(--bug), var(--card-bg) 25%)
 }
 
@@ -107,7 +107,7 @@ body {
   background-color: var(--bug);
 }
 
-.bg.dragon {
+.bg-dragon {
   background: linear-gradient(to top right, var(--dragon), var(--card-bg) 25%)
 }
 
@@ -115,7 +115,7 @@ body {
   background-color: var(--dragon);
 }
 
-.bg.psychic {
+.bg-psychic {
   background: linear-gradient(to top right, var(--psychic), var(--card-bg) 25%)
 }
 
@@ -123,7 +123,7 @@ body {
   background-color: var(--psychic);
 }
 
-.bg.flying {
+.bg-flying {
   background: linear-gradient(to top right, var(--flying), var(--card-bg) 25%)
 }
 
@@ -131,7 +131,7 @@ body {
   background-color: var(--flying);
 }
 
-.bg.fighting {
+.bg-fighting {
   background: linear-gradient(to top right, var(--fighting), var(--card-bg) 25%)
 }
 
@@ -139,7 +139,7 @@ body {
   background-color: var(--fighting);
 }
 
-.bg.normal {
+.bg-normal {
   background: linear-gradient(to top right, var(--normal), var(--card-bg) 25%)
 }
 
